# frdm_rw612_blank

./: .cproject  .gitignore  .project  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  FRDM_RW612_MCUXPRESSO.md  Kconfig  MCUXPRESSO_SETUP.md  MODULE_ARCHITECTURE.md  MODULE_SUMMARY.md  MULTITASKING_GUIDE.md  Makefile  RW612_OTA_FUNCTION_SPEC.md  build.bat  frdm_rw612_blank JLink Debug.launch  frdm_rw612_blank JLink Release.launch  frdm_rw612_blank.code-workspace  frdm_rw612_blank_Debug_JLink.launch  frdm_rw612_blank_Debug_LinkServer.launch  io.txt  mcux_include.json  prj.conf  script.jlink  west.yml
.claude/: settings.local.json
app/: app_main.h  app_main_zephyr.c  i2c_bus.c  i2c_bus.h  multitask_init.c  multitask_init.h
app/.matter/: matter_hub_core.h  matter_prefs.c
app/audio/: audio_player.c  audio_player.h  es8388.c  es8388.h
app/ble/: zephyr_bt_rand_shim.c
app/ble/gatt_client/: ble_central.c  ble_central.h
app/ble/gatt_servers/: svc_ctrl.c  svc_ctrl.h  svc_ir.c  svc_ir.h  svc_led.c  svc_led.h  svc_matter.c  svc_matter.h  svc_ota.c  svc_ota.h  svc_prov.c  svc_prov.h  svc_status.c  svc_status.h
app/ir/: ir_aircon.c  ir_aircon.h  ir_codec_samsung_ac.c  ir_codec_samsung_ac.h  ir_decode.c  ir_decode.h  ir_rx.h  ir_rx_nxp_gpio_ctimer.c  ir_rx_nxp_gpio_ctimer.h  ir_tx.h  ir_tx_nxp_ctimer.c  ir_tx_nxp_ctimer.h  ir_tx_zephyr.c
app/leds/: led_strip_zephyr.c  led_strip_zephyr.h  led_task.h  led_task_zephyr.c  sk6812.c  sk6812.h  sk6812_io_nxp_spi.c  sk6812_io_nxp_spi.h  sleep_light_table.h
app/matter/: matter_device_info.h  matter_file_slot.h  matter_hub_core.c  matter_prefs.h
app/nvm/: app_nvram.c  app_nvram.h  nvs_backend.c  nvs_backend.h
app/ota/: app_ota.c  app_ota.h  app_ota_http.c  app_ota_http.h
app/radar/: app_radar.h  app_radar_zephyr.c
app/rotary_enc/: rotary_enc.c  rotary_enc.h
app/sensors/: amg8833.c  amg8833.h  amg8833_task.c  amg8833_task.h  bh1750.c  bh1750.h  bh1750_io_nxp_i2c.c  bh1750_io_nxp_i2c.h  lux_task.c  lux_task.h  mlx90640.c  mlx90640.h  mlx90640_task.c  mlx90640_task.h
app/tcp/: app_tcp_client.c  app_tcp_client.h  app_tcp_server.c  app_tcp_server.h
app/wifi/: app_wifi.c  app_wifi.h
boards/: FRDM_RW612_INFO.md  frdm_rw612.overlay
cmake_configs/: frdm_rw612_blank_cmake.json
src/: main.c  프로그램동작시퀀스.txt
